	Known issues:
		- nested calls to string drive callers deadlock
	Bug fixes:
		- fixed build with RTAI configured without inlining
		- fixed math parser bug with function calls in expressions
		- fixed deadlock in recursive string parser calls
		- fixed echo of modal joint record 12 (noted by Timothy Jim)
		- fixed Windows build of mbdyn_util_oct.oct (Reinhard Resch)

MBDyn 1.6.0
	Enhancements:
		- added central gravity field (suggested by Linh H. Phan)
		- added automatic differentiation support to drive callers
		  and constitutive laws (Reinhard Resch)
		- added (optional) modal joint reaction forces output
		- added runtime loadable file drivers
		- added generic joystick driver (module-hid)
		- added run-time loadable "description" registration
		- added "namespace" stmt (module-namespace)
		- added symbol table in namespaces (module-namespace)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix module-octave build and scripts installation
		  (Reinhard Resch)
		- fix initial assembly of viscoelastic deformable joint
		  (noted by Reinhard Resch)
		- fix python detection (David Verelst)
		- fix SparseSuite_config detection
		  (Marco Morandini; noted by David Verelst)
		- fixed (harmless) stmt parsing bug

MBDyn 1.5.6
	Enhancements:
		- added explicit cast to math parser
		- added loads fade-in in module-aerodyn
		  (Jens van Schelve, Patrick Rix)
		- added "drivep" (derivative) function to model namespace
		- added measures in aircraft instruments
		- added axial constitutive law wrapper
		- added simple gear joint (Eduardo Okabe)
		- added kinetic energy in automatic structural element
		  private data
		- added "postponed" drive caller capability
		- added max time step as drive (Reinhard Resch)
		- added min/max drive caller (Reinhard Resch)