@@ -25,6 +25,7 @@ MBDyn 1.X-Devel
 		- fixed deadlock in recursive string parser calls
 		- fixed echo of modal joint record 12 (noted by Timothy Jim)
 		- fixed Windows build of mbdyn_util_oct.oct (Reinhard Resch)
+		- fixed mode label in ModalExt output (noted by Timothy Jim)
 
 MBDyn 1.6.0
 	Enhancements:
